# cv-pipe-wasm

./: LICENSE  README.md
.github/workflows/: deploy.yml
cv-pipe-wasm-demo/: .prettierrc  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
cv-pipe-wasm-demo/src/: App.tsx
cv-pipe-wasm-demo/src/hooks/: useCvPipe.ts
cv-pipe-wasm-rust/: .gitignore  Cargo.toml  README.md
cv-pipe-wasm-rust/src/: lib.rs  macros.rs  main.rs
cv-pipe-wasm-rust/src/core/: mod.rs  processor.rs
cv-pipe-wasm-rust/src/core/ops/: find_max_contour_points.rs  mod.rs  resize.rs  to_blur.rs  to_canny.rs  to_gray.rs  to_perspective.rs  to_threshold.rs
cv-pipe-wasm-rust/src/wasm/: mod.rs  pipe_ops.rs
